# anissia-gtk

./: .gitignore  LICENSE  Makefile  Makefile.am  anissiaapp.c  anissiaapp.desktop  anissiaapp.gresource.xml  anissiaapp.h  anissiaapplist.c  anissiaapplist.h  anissiaappwin.c  anissiaappwin.h  app-menu.ui  main.c  requester.c  requester.h  resources.c  window.ui
